2004-03-30  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/libc-start.c (LIBC_START_MAIN)
	[HAVE_CLEANUP_JMP_BUF]: Call __nptl_deallocate_tsd.

2004-03-30  Jakub Jelinek  <jakub@redhat.com>

	* nis/nss_nis/nis-service.c (_nss_nis_getservbyname_r): If protocol
	== NULL, try name/tcp and name/udp first before falling back into
	the sequential scanning.  Use services.byname database for
	sequential scanning.
	(_nss_nis_getservbyport_r): Likewise.  Just allocate sizeof (int) * 3
	chars for integer.

	* nis/nss_nis/nis-service.c (_nss_nis_getservbyport_r): Convert
	proto to host by order for snprintf.

2004-03-30  Ulrich Drepper  <drepper@redhat.com>

	* nss/getent.c (services_keys): Don't implement lookups with
	missing protocol using getservent loop, just pass NULL.

	* sysdeps/unix/sysv/linux/i386/setgroups.c (setgroups): Avoid
	comparison with limit if we can rely on the syscall being available.

	* nis/nss_nis/nis-initgroups.c: Implement getting the information
	from the netid.byname map if the system administrator allows this.
	* nis/Makefile (distribute): Add nss.
	* nis/nss: New file.

	* grp/initgroups.c (initgroups): Limit the initial allocation to 64
	entries to not allocate too much on systems with really high limits.

2004-03-30  Jakub Jelinek  <jakub@redhat.com>

	* nis/nss_nis/nis-service.c (struct search_t): New type.
	(dosearch): New function.
	(_nss_nis_getservbyname_r): Use it.  Call yp_get_default_domain
	unconditionally.
	(_nss_nis_getservbyport_r): Likewise.

2004-03-29  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/unix/sysv/linux/sched_getaffinity.c: Prepend GLIBC_ to
	version names is SHLIB_COMPAT check.
	* sysdeps/unix/sysv/linux/sched_setaffinity.c: Likewise.

2004-03-29  Ulrich Drepper  <drepper@redhat.com>

	* nis/nss_nis/nis-rpc.c (saveit): Improve memory handling.  No need to
	allocate multiple blocks.
	(internal_nis_endrpcent): Adjust accordingly.
	* nis/nss_nis/nis-proto.c (saveit): Improve memory handling.  No need